# PythonProject

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: models.py
tests/: test_models.py
